# eqrng.com

./: .dockerignore  .gitignore  CHANGE_LOG.md  Cargo.toml  Dockerfile  Dockerfile.backend  Dockerfile.dev  README.md  TODO.md  build.sh  docker-compose-separate.yml  docker-compose.dev.yml  docker-compose.yml  dockerfile  rebuild_docker.sh
config/: default.toml  development.toml  production.toml
data/: class_race.json  complete_dump.sql  data-20250811_074252.sql  data-20250811_213738.sql  data-20250811_214012.sql  data-20250811_220147.sql  data-20250811_220206.sql  data-20250811_224328.sql  data-20250812_003644.sql  data-20250812_021306.sql  data.sql  zones.db  zones.db.backup  zones.db.backup.current
data/zones/: classic.json  cotf.json  cov.json  dodh.json  dodh_missions.json  don.json  don_missions.json  eok.json  god.json  god_missions.json  hot.json  hot_missions.json  hot_zones.txt  kunark.json  ldon.json  loy.json  ls.json  ls_missions.json  nos.json  oow.json  oow_missions.json  planes_of_power.json  raids.json  ro.json  ro_missions.json  rof.json  rof_missions.json  ros.json  shadows_of_luclin.json  sod.json  sod_missions.json  sof.json  sof_missions.json  tbl.json  tbm.json  tbs.json  tds.json  tob.json  tob_missions.json  tol.json  (+5 more)
docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
docker/data/: zones.db  zones.db-shm
docs/: CONFIGURATION.md  epic_notes.md  hot_zones.txt
frontend/: Dockerfile  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
frontend/src/layouts/: Layout.astro
frontend/src/pages/: character.astro  class.astro  fallback-demo.astro  index.astro  (+3 more)
migrations/: Cargo.toml  README.md
migrations/src/: lib.rs  migrate_zones.rs
migrations/zone_ratings/: auto_migrate_zone_ratings_20250731_115359.sh  auto_migrate_zone_ratings_20250731_115838.sh  migration_template.sh
public/: index.html  index.html.old
src/: admin.rs  classes.rs  config.rs  error.rs  instances.rs  lib.rs  links.rs  logging.rs  main.rs  races.rs  ratings.rs  security.rs  version.rs  zones.rs
src/admin/: dashboard.rs  flags.rs  instances.rs  links.rs  mod.rs  notes.rs  ratings.rs  types.rs  utils.rs  zones.rs
tests/: Cargo.toml  README.md  test_new_races.rs  test_notes.html  test_races_simple  test_races_simple.rs
tests/src/: lib.rs  test_db.rs
utils/: README_BACKUP.md  backup_database.sh  backup_zone_ratings.sh  build.sh  clear_docker.sh  cron_backup.sh  cron_example.txt  deploy_with_rating_log.sh  docker-entrypoint.sh  dump_zone_ratings_from_docker.sh  extract_functions.py  rating_transaction_log.sh  rebuild_docker.sh  rebuild_with_zone_ratings.sh  resize_assets.sh  restore_database.sh  restore_zone_ratings_to_container.sh  run_migrations.sh  run_tests.sh  setup_logs.sh  test_rating_log.sh  test_ratings.sh  test_zone_ratings.sh  verify_races.sh  zone_ratings_summary.sh
zones/: classic.json  don.json  god.json  kunark.json  ldon.json  loy.json  oow.json  planes_of_power.json  shadows_of_luclin.json  shadows_of_luclin_json  tss.json  velious.json
(+1 files in other folders)
