[workspace]
members = [".", "tests"]

[package]
name = "eq_rng"
version = "0.0.4"
edition = "2024"

[features]
default = []
admin = []

[lib]
name = "eq_rng"
path = "src/lib.rs"

[[bin]]
name = "eq_rng"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["tokio", "http1"] }
hyper = { version = "0.14", features = ["server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
tower-http = { version = "0.6.6", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "json",
] }
urlencoding = "2.1"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"
