[package]
name = "eq_rng_migrations"
version = "0.0.4"
edition = "2024"

[[bin]]
name = "migrate_zones"
path = "src/migrate_zones.rs"

[dependencies]
eq_rng = { path = "../", version = "0.0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "json",
] }
