[package]
name = "eq_rng_tests"
version = "0.0.4"
edition = "2024"

[[bin]]
name = "test_db"
path = "src/test_db.rs"

[dependencies]
eq_rng = { path = "../", version = "0.0.4" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "json",
] }
